Closed
Bug 1501496
Opened 7 years ago
Closed 7 years ago
Don't do blocking IPC calls on each accessible event
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla65
People
(Reporter: eeejay, Assigned: eeejay)
References
Details
(Whiteboard: [geckoview:p1])
Attachments
(1 file)
|
46 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
We currently send some info about the accessible with the event when dispatching to platform. This means we do a couple of synchronous IPC calls, specifically to get the accessible's name to populate the event's text field.
I checked, and Chrome doesn't do that anymore. TalkBack relies on the text on the actual accessible node it retrieves from the event. If we remove that text as well, it will be a couple of less synchronous calls we make.
| Assignee | ||
Comment 1•7 years ago
|
||
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6ff7a3acb857
Don't send accessible GeckoBundle in sendEvent, class names is enough. r=Jamie
Comment 3•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox65:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Comment 4•7 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 5•7 years ago
|
||
Comment on attachment 9019787 [details]
Bug 1501496 - Don't send accessible GeckoBundle in sendEvent, class names is enough. r?Jamie!
[Beta/Release Uplift Approval Request]
Feature/Bug causing the regression: Bug 1479037
User impact if declined: Users may potentially experience slowdowns if they have accessibility enabled (screen reader, password manager, etc)
Is this code covered by automated tests?: Yes
Has the fix been verified in Nightly?: Yes
Needs manual test from QE?: No
If yes, steps to reproduce:
List of other uplifts needed: Bug 1502187, Bug 1479039, Bug 1507026, Bug 1506709
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky): It simplifies accessibility events, so things should be better.
String changes made/needed:
Attachment #9019787 -
Flags: approval-mozilla-beta?
Comment 6•7 years ago
|
||
64=affected because Eitan says this fix should be uplifted to 64 Beta.
status-firefox63:
--- → wontfix
status-firefox64:
--- → affected
| Assignee | ||
Comment 8•7 years ago
|
||
Note that this patch seems to fix an OOM in 64 found in bug 1508641.
Comment 9•7 years ago
|
||
Comment on attachment 9019787 [details]
Bug 1501496 - Don't send accessible GeckoBundle in sendEvent, class names is enough. r?Jamie!
approved for 64.0b12
Attachment #9019787 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 10•7 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•