Bug 1501496 - Don't send accessible GeckoBundle in sendEvent, class names is enough. r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D9689

--HG--
extra : moz-landing-system : lando